# rapida-jupyter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  create_user.sh  docker-compose.yaml  entrypoint.sh  jupyterhub_config.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: CreateProject.ipynb  DataVisualization.ipynb  HowToRun.ipynb  README.ipynb  RunAssessment.ipynb  initialization.ipynb  project-management.ipynb
notebooks/admin/: cgaz.ipynb  gui.ipynb  ocha.ipynb  osm.ipynb
notebooks/built-environment/: buildings.ipynb  electricity.ipynb  roads.ipynb
notebooks/landuse/: landuse.ipynb
notebooks/population/: population.ipynb
notebooks/social-economic/: deprivation.ipynb  gdp.ipynb  rwi.ipynb
rapida_jupyter/admin/: gui.py
rapida_jupyter/az/: authwidget.py  cell_hook.py
rapida_jupyter/util/: assess_gui.py  display_geodata.py  in_notebook.py
